--- a/styles.css
+++ b/styles.css
@@ -8,50 +8,35 @@
     --hover-text-color:#2196F3;
     --sec-text-color:#757575;
     --alt-text-color:#FFFFFF;
-    --social-text-color:#AFB1B8;
-
 }
 
 body {
  background-color: var(--main-background-color);
  font-family: 'Roboto', sans-serif;
+ height:2015px;
 }
 a {
     text-decoration: none;
-    padding: 0px;
-    margin: 0px;
-}
-li {
-padding: 0px;
-margin: 0px;
 }
 ul {
     list-style: none;
-    margin: 0px;
-    padding: 0px;
 }
 main {
-    border-top: 1px solid rgba(236, 236, 236, 1) ;
+    margin-bottom: -15px;
+    margin-top: -22px;
 }
 h1 {
     margin: 0px;
-    padding: 0px;
 }
 h2 {
     margin: 0px;
-    padding: 0px;
 }
 h3 {
     margin: 0px;
-    padding: 0px;
 }
-p {
-    margin: 0px;
-    padding: 0px;
-}
-img {
-    padding: 0px;
-    margin: 0px;
+ul {
+margin: 0px;
+padding: 0px;
 }
 /*цвет основного текста #212121, 100%*/
 /*цвет вторичного текста #757575, 100%*/
@@ -66,52 +51,32 @@ img {
      font-size: 14px;
      line-height: 16px;
      letter-spacing: 0.02em;
+     padding-right: 50px;
      display: inline-flex;
      justify-content:space-between;
-     margin: 0px;
  }
- .site-nav li:not(:last-child){
-     padding-right: 50px;
+ .site-nav .list-item:last-child {
+    padding-right:0px;
  }
  header {
-     display: flex;
+     display: inline-flex;
     flex-direction:row;
-    align-items: baseline;
-    padding-bottom: 32px;
-    padding-top: 32px;
-    justify-content: space-between;
+    align-items: center;
+    justify-content:space-between;
+    height: 80px;
+    border-bottom: 1px solid #ECECEC;
  }
- .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    }
  header nav {
     display: inline-flex;
     flex-direction:row;
     align-items: center;
- }
- .head-ico{
-    display: inline-block;
-    width: 16px;
-    height: 12px;
-    margin-right: 10px;
-    box-sizing: border-box;
-    fill: currentColor;
-
- }
- .head-ico:hover,
- .head-ico:focus{
-    color: var(--hover-text-color);
  }
  .site-nav {
     display: inline-flex;
     flex-direction:row; 
     align-items: center;
     margin-left: 93px;
-    margin-right: 200px;
+    margin-right: 331px;
  }
 .site-nav .link:hover ,
 .site-nav .link:focus{
@@ -131,22 +96,9 @@ img {
     color: var(--hover-text-color);
 }
 .blackboard {
-    text-align: center;
-    padding-top: 200px;
-    padding-bottom: 198.1px;
-    background-image: linear-gradient(
-        to top left,
-        rgba(47,48,58,0.4), 
-        rgba(47,48,58,0.4)
-        ),
-        url("../images/blackboard.jpg");
-    max-width:  1600px;
     background-color:var(--dark-background-color);
-    margin-left: auto;
-    margin-right: auto;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    height: 600px;
+    text-align: center;
 }
 .blackboard button {
 text-align: center;
@@ -169,6 +121,7 @@ border: 0px;
     line-height: 60px;
 }
 .blackboard h1{
+    padding-top: 200px;
     margin-bottom: 30px;
 }
 .hero-title:hover,
@@ -182,30 +135,24 @@ border: 0px;
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
+    padding-top: 94px;
     margin-bottom: 50px;
-}
-.facility {
-    padding-top:88px ;
-    padding-bottom: 92px;
 }
 .wwd{
     display: inline-flex;
     flex-direction:row;
+    padding: 0px 215px 94px;
+    margin-left: -30px;
+
 }
 .wwd li{
-    display: flex;
-    flex-basis: calc(100% / 3);
-    justify-content: space-between;
-    margin-left: 30px;
+    padding-left: 30px;
 }
-.wwd li:first-child{
-    margin-left: 0px;
-    margin-right: 0px;
-}
-.team-board {
+.team-board{
     background-color: var(--sec-background-color);
-    padding-top: 94px;
-    padding-bottom: 94px;
+    height: 648px;
+    margin: 0px; 
+    padding: 0px;
 }
 .team h3{
     text-align: center;
@@ -218,86 +165,42 @@ border: 0px;
     text-align: center;
     display: inline-flex;
     flex-direction:row;
+    margin-left: -30px;
+    padding: 0px 215px 94px;
+    margin-right: -30px;
     justify-content: space-between;
+    padding-bottom: 94px;
 }
-.team .team-mate {
+.team li{
     margin-left: 30px;
     background-color: var(--main-background-color);
+    box-shadow: var(--dark-background-color);
     border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.team .team-mate:first-child{
-    margin-left: 0px;
-    margin-right: 0px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .team p {
     text-align: center;
     color: var(--sec-text-color);
 }
-.team p::after {
-    display: inline-flex;
-}
-.socials {
-    display: flex;
-    flex-basis: calc(100% / 4);
-    justify-content: center;
-}
-.socials .item:not(:last-child) {
-    margin-right: 10px;
-}
-.social-button {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--main-background-color);
-    border-radius: 50%;
-    box-sizing: border-box;
-    width: 44px;
-    height: 44px;
-    color: var(--social-text-color);
-}
-.social-button:focus,
-.social-button:hover {
-    background-color: var(--alt-background-color);
-    color: var(--main-background-color);
-}
-.team-icon{
-    width: 20px;
-    height: 20px;
-    fill: currentColor;
-}
 .our-benefits {
-    padding-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
 }
-.adv {
+.adv{
     display: inline-flex;
     flex-direction:row;
+    padding: 0px 235px;
+    margin: 0px;
 }
 .adv li {
     box-sizing: border-box;
-  flex-basis: calc(100% / 4 - 10px);
-  margin-left: 30px;
-}
-.pic-ido {
-    display: flex;
-    height: 120px;
-    background-color: var(--sec-background-color);
-    border-radius: 4px;
-    margin-bottom: 30px;
-    width: 270px;
-    justify-content: center;
-    align-items: center;
-}   
-.adv-ico{
-    width: 70px;
-    height: 70px;
-}
-.adv li:first-child:{
-    margin-left: 0px;
-    margin-right: 0px;
-}
-.adv li:last-child{
-    margin-right: 0px;
+    padding: 10px;
+  /* Задаём всем элементам маржины слева и сверху */
+  margin-left: 10px;
+  margin-top: 10px;
+  /*  Задаём ширину элементов  */
+  flex-basis: calc(100% / 3 - 10px);
 }
 .adv p {
     text-align: left;
@@ -307,6 +210,7 @@ border: 0px;
     font-size: 14px;
     line-height:24px;
     letter-spacing: 0.03em;
+    
 }
 .adv h3 {
     text-align: left;
@@ -318,22 +222,31 @@ border: 0px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin: 0px;
-    margin-bottom: 10px;
     
 }
 footer {
     background-color:var(--dark-background-color);
-    padding-bottom: 60px;
-    padding-top: 60px;
+    height: 252px;
+    margin: 0px;
+    padding: 0px;
+
 }
 footer p {
-    margin-bottom: 20px;
+    padding-top: 60px;
+    padding-bottom: 20px;
 }
 address {
     color: var(--main-background-color);
     font-weight:  400;
     font-style: normal;
     font-size: 14px;
+    margin-left: 165px;
+}
+footer ul {
+    margin-left: 125px
+}
+footer li {
+    margin-bottom: 9px;
 }
 .logo {
     color:#2196F3;
@@ -342,7 +255,7 @@ address {
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
-    
+    margin-left: 165px;
 }
 .link {
     color: var(--main-text-color);
@@ -383,7 +296,7 @@ address {
     text-align: center;
     padding-top: 94px;
     justify-content: space-between;
-    padding-bottom: 94px;
+    padding-bottom: 34px;
 }
 .portfolio h3 {
     color: var(--main-text-color);
@@ -409,116 +322,19 @@ address {
 .portfolio {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 50px;
+    padding-left: 215px;
+    padding-right: 215px;
+    padding-bottom: 94px;
     flex-basis: calc(100% / 3);
     justify-content: space-between;
 }
 .project-name {
-text-align: left;
 box-sizing: border-box;
   /*  Задаём ширину элементов  */
   border: 1px solid #EEEEEE;
   margin-bottom: 30px;
 }
-.project-name:nth-last-child(-n+3){
-    margin-bottom: 0px
-}
 .chapter {
-    padding: 20px 24px;
-}
-.dude {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    line-height:280%
-}
-.go_to {
     text-align: left;
-    line-height:180%;
-}
-.our-clients {
-    background-color: var(--main-background-color);
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-.client {
-    display: inline-flex;
-    flex-direction:row;
-    justify-content: space-between;
-    margin: 0px;
-    padding: 0px;
-}
-.cli-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 30px;
-    border: 1px solid #AFB1B8;
-    box-sizing: border-box;
-    border-radius: 4px;
-    width: 170px;
-    height: 90px;
-    padding: 0px;
-    color: var(--social-text-color);
-}
-.cli-link:hover,
-.cli-link:focus{
-    border-color: var(--alt-background-color);
-}
-.cli-ico{
-    width: 50%;
-    height: 50%;
-    fill: currentColor;
-}
-.cli-ico:hover,
-.cli-ico:focus{
-    fill: var(--alt-background-color) ;
-}
-.connect{
-    align-self: center;
-    padding-left:312px ;
-    text-align: left;
-}
-
-.connect h3 {
-    font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--alt-text-color);
-padding-bottom: 20px;
-}
-.socials-foot {
-    display: flex;
-    flex-basis: calc(100% / 4);
-    justify-content: left;
-}
-.socials-foot .item-foot:not(:last-child) {
-    margin-right: 10px;
-}
-.socials-foot .item-foot:nth-child(-3n+3) {
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-.social-button-foot {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background-color:  #424246;
-    border-radius: 50%;
-    box-sizing: border-box;
-    width: 44px;
-    height: 44px;
-    color: var(--alt-text-color);
-}
-.social-button-foot:focus,
-.social-button-foot:hover {
-    background-color: var(--alt-background-color);
-    color: var(--main-background-color);
-}
-.team-icon-foot{
-    width: 20px;
-    height: 20px;
-    fill: currentColor;
+    padding: 57px;
 }
